fix mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -191,7 +191,7 @@ a {
 	font-weight: var(--fw-bold);
 	text-align: center;
 	height: 5em;
-	width: 6.2em;
+	width: 6.5em;
 	display: block;
 	color: var(--color-dark-brown1);
 	margin: auto;
